<resources>
    <string name="app_name" translatable="false">Trixie</string>
    <string name="app_version">version %1$s</string>
    <string name="menu_start">START</string>
    <string name="menu_stop">STOP</string>
    <string name="menu_properties">Properties</string>
    <string name="nav_profiles">Profiles</string>
    <string name="nav_repository">Repository</string>
    <string name="nav_terminal">Terminal</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_exit">Exit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_install">Install</string>
    <string name="menu_configure">Configure</string>
    <string name="menu_export">Export</string>
    <string name="menu_status">Status</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_add">New</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_change_url">Change URL</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_more">Menu</string>
    <string name="loading_message">Loading data...</string>
    <string name="updating_env_message">Updating operating environment...</string>
    <string name="removing_env_message">Removing operating environment...</string>
    <string name="notification_current_profile">Current profile</string>
    <string name="title_activity_main" translatable="false">Trixie</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_properties">Properties</string>
    <string name="title_activity_profiles">Profiles</string>
    <string name="title_activity_mounts">Mounts</string>
    <string name="title_activity_repository">Repository</string>
    <string name="confirm_start_title">Start</string>
    <string name="confirm_stop_title">Stop</string>
    <string name="confirm_start_message">Mount the container and start services?</string>
    <string name="confirm_stop_message">Stop services and unmount the container?</string>
    <string name="new_profile_title">Profile name</string>
    <string name="edit_profile_title">Profile name</string>
    <string name="import_profile_title">Import profile</string>
    <string name="export_profile_title">Export profile</string>
    <string name="toast_import_profile_success">Profile has been successfully imported.</string>
    <string name="toast_import_profile_error">Error importing profile!</string>
    <string name="toast_export_profile_success">Profile has been successfully exported.</string>
    <string name="toast_export_profile_error">Error exporting profile!</string>
    <string name="toast_loading_error">Error loading data!</string>
    <string name="toast_updating_env_error">Error updating of operating environment!</string>
    <string name="confirm_profile_discard_title">Remove profile</string>
    <string name="confirm_profile_discard_message">Remove selected profile?</string>
    <string name="new_mount_title">New mount point</string>
    <string name="edit_mount_title">Edit mount point</string>
    <string name="confirm_mount_discard_title">Remove mount point</string>
    <string name="confirm_mount_discard_message">Remove selected mount point from the list?</string>
    <string name="repository_import_message">%1$s\n\nSize: %2$s MB</string>
    <string name="repository_import_button">Import</string>
    <string name="repository_purchase_button">Purchase</string>
    <string name="repository_change_url_title">Repository URL</string>
    <string name="repository_default_description">No description.</string>
    <string name="write_permissions_disallow">The app was not allowed to write to your storage</string>
    <string name="app_preferences">Application</string>
    <string name="title_screenlock_preference">Lock screen</string>
    <string name="summary_screenlock_preference">Keep screen active while the application is running</string>
    <string name="title_wifilock_preference">Lock Wi-Fi</string>
    <string name="summary_wifilock_preference">Keep Wi-Fi active while the application is running</string>
    <string name="title_wakelock_preference">Wake lock</string>
    <string name="summary_wakelock_preference">Keep CPU running to do work while the screen is off</string>
    <string name="title_language_preference">Language</string>
    <string name="dialog_title_language_preference">Choose language</string>
    <string name="title_fontsize_preference">Font size</string>
    <string name="dialog_title_fontsize_preference">Font size</string>
    <string name="title_maxlines_preference">Scroll size</string>
    <string name="dialog_title_maxlines_preference">Scroll size</string>
    <string name="title_theme_preference">Theme</string>
    <string name="dialog_title_theme_preference">Choose theme</string>
    <string name="title_timestamp_preference">Timestamp</string>
    <string name="summary_timestamp_preference">Show timestamp</string>
    <string name="title_appicon_preference">Show icon</string>
    <string name="summary_appicon_preference">Display icon in notification bar</string>
    <string name="title_stealth_preference">Stealth mode</string>
    <string name="summary_stealth_preference">Hide application icon from launcher</string>
    <string name="title_autostart_preference">Autostart</string>
    <string name="summary_autostart_preference">Automatically run the container when starting Android</string>
    <string name="title_autostart_delay_preference">Autostart delay</string>
    <string name="dialog_title_autostart_delay_preference">Delay (seconds)</string>
    <string name="title_nettrack_preference">Track network changes</string>
    <string name="summary_nettrack_preference">Track changes of the network and update the container</string>
    <string name="title_powertrack_preference">Track power changes</string>
    <string name="summary_powertrack_preference">Track changes of the power and update the container</string>
    <string name="env_preferences">Environment</string>
    <string name="title_env_dir_preference">ENV directory</string>
    <string name="dialog_title_env_dir_preference">ENV directory</string>
    <string name="title_path_preference">PATH variable</string>
    <string name="dialog_title_path_preference">PATH variable</string>
    <string name="title_server_url_preference">Server URL</string>
    <string name="dialog_title_server_url_preference">Server URL</string>
    <string name="title_installenv_preference">Update ENV</string>
    <string name="summary_installenv_preference">Update the operating environment</string>
    <string name="message_installenv_confirm_dialog">Update the operating environment?</string>
    <string name="title_removeenv_preference">Remove ENV</string>
    <string name="summary_removeenv_preference">Remove the operating environment</string>
    <string name="message_removeenv_confirm_dialog">Remove the operating environment?</string>
    <string name="services_preferences">Services</string>
    <string name="title_is_telnet_preference">TELNET</string>
    <string name="summary_is_telnet_preference">Enable telnetd daemon</string>
    <string name="title_telnet_port_preference">Port</string>
    <string name="dialog_title_telnet_port_preference">TELNET port</string>
    <string name="title_telnet_localhost_preference">Localhost</string>
    <string name="summary_telnet_localhost_preference">Allow connections only from localhost</string>
    <string name="title_is_http_preference">HTTP</string>
    <string name="summary_is_http_preference">Enable httpd daemon</string>
    <string name="title_http_port_preference">Port</string>
    <string name="dialog_title_http_port_preference">HTTP port</string>
    <string name="title_http_conf_preference">Access restriction</string>
    <string name="dialog_title_http_conf_preference">Access restriction</string>
    <string name="debug_preferences">Debug</string>
    <string name="title_debug_mode_preference">Debug mode</string>
    <string name="summary_debug_mode_preference">Show debugging information</string>
    <string name="title_trace_mode_preference">Trace mode</string>
    <string name="summary_trace_mode_preference">Enable tracing mode</string>
    <string name="title_logger_preference">Logging</string>
    <string name="summary_logger_preference">Save logs to a file</string>
    <string name="title_logfile_preference">Log file</string>
    <string name="dialog_title_logfile_preference">Log file</string>
    <string name="title_install_dialog">Install</string>
    <string name="message_install_dialog">Start Debian installation?</string>
    <string name="title_configure_dialog">Configure</string>
    <string name="message_configure_dialog">Start configuration of the container?</string>
    <string name="title_export_dialog">Export</string>
    <string name="bootstrap_preferences">BOOTSTRAP</string>
    <string name="title_distrib_preference">Distribution</string>
    <string name="dialog_title_distrib_preference">Distribution</string>
    <string name="title_arch_preference">Architecture</string>
    <string name="dialog_title_arch_preference">Architecture</string>
    <string name="title_suite_preference">Distribution suite</string>
    <string name="dialog_title_suite_preference">Distribution suite</string>
    <string name="title_source_path_preference">Source path</string>
    <string name="dialog_title_source_path_preference">Source path</string>
    <string name="title_target_type_preference">Installation type</string>
    <string name="dialog_title_target_type_preference">Installation type</string>
    <string name="title_target_path_preference">Installation path</string>
    <string name="dialog_title_target_path_preference">Installation path</string>
    <string name="title_disk_size_preference">Image size (MB)</string>
    <string name="dialog_title_disk_size_preference">Disk image size (MB)</string>
    <string name="summary_disk_size_preference">Automatic calculation</string>
    <string name="title_fs_type_preference">File system</string>
    <string name="dialog_title_fs_type_preference">File system</string>
    <string name="title_user_name_preference">User name</string>
    <string name="dialog_title_user_name_preference">User name</string>
    <string name="title_user_password_preference">User password</string>
    <string name="dialog_title_user_password_preference">User password</string>
    <string name="title_privileged_users_preference">Privileged users</string>
    <string name="dialog_title_privileged_users_preference">Privileged users</string>
    <string name="title_locale_preference">Localization</string>
    <string name="dialog_title_locale_preference">Localization</string>
    <string name="title_dns_preference">DNS</string>
    <string name="dialog_title_dns_preference">Address of DNS server</string>
    <string name="summary_dns_preference">Automatic detection</string>
    <string name="title_net_trigger_preference">Network trigger</string>
    <string name="dialog_title_net_trigger_preference">Path to trigger script</string>
    <string name="title_power_trigger_preference">Power trigger</string>
    <string name="dialog_title_power_trigger_preference">Path to trigger script</string>
    <string name="init_preferences">INIT</string>
    <string name="title_is_init_preference">Enable</string>
    <string name="mounts_preferences">MOUNTS</string>
    <string name="title_is_mounts_preference">Enable</string>
    <string name="summary_is_mounts_preference">Allow to mount the Android resources</string>
    <string name="title_mounts_editor_preference">Mount points</string>
    <string name="summary_mounts_editor_preference">Edit the mount points list</string>
</resources>