<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/bootstrap_preferences">

        <EditTextPreference
            android:defaultValue="@string/source_path"
            android:dialogTitle="@string/dialog_title_source_path_preference"
            android:key="source_path"
            android:summary="@string/source_path"
            android:title="@string/title_source_path_preference" />

        <ListPreference
            android:defaultValue="@string/target_type"
            android:dialogTitle="@string/dialog_title_target_type_preference"
            android:entries="@array/target_type_entries"
            android:entryValues="@array/target_type_values"
            android:key="target_type"
            android:summary="@string/target_type"
            android:title="@string/title_target_type_preference" />

        <EditTextPreference
            android:defaultValue="@string/target_path"
            android:dialogTitle="@string/dialog_title_target_path_preference"
            android:key="target_path"
            android:summary="@string/target_path"
            android:title="@string/title_target_path_preference" />

        <EditTextPreference
            android:defaultValue="@string/disk_size"
            android:dialogTitle="@string/dialog_title_disk_size_preference"
            android:inputType="numberDecimal"
            android:key="disk_size"
            android:summary="@string/disk_size"
            android:title="@string/title_disk_size_preference" />

        <ListPreference
            android:defaultValue="@string/fs_type"
            android:dialogTitle="@string/dialog_title_fs_type_preference"
            android:entries="@array/fs_type_values"
            android:entryValues="@array/fs_type_values"
            android:key="fs_type"
            android:summary="@string/fs_type"
            android:title="@string/title_fs_type_preference" />

        <EditTextPreference
            android:defaultValue="@string/user_name"
            android:dialogTitle="@string/dialog_title_user_name_preference"
            android:key="user_name"
            android:summary="@string/user_name"
            android:title="@string/title_user_name_preference" />

        <EditTextPreference
            android:defaultValue="@string/privileged_users"
            android:dialogTitle="@string/dialog_title_privileged_users_preference"
            android:key="privileged_users"
            android:summary="@string/privileged_users"
            android:title="@string/title_privileged_users_preference" />

        <ListPreference
            android:defaultValue="@string/locale"
            android:dialogTitle="@string/dialog_title_locale_preference"
            android:entries="@array/locale_values"
            android:entryValues="@array/locale_values"
            android:key="locale"
            android:summary="@string/locale"
            android:title="@string/title_locale_preference" />

        <EditTextPreference
            android:defaultValue="@string/dns"
            android:dialogTitle="@string/dialog_title_dns_preference"
            android:key="dns"
            android:summary="@string/dns"
            android:title="@string/title_dns_preference" />

        <EditTextPreference
            android:defaultValue="@string/net_trigger"
            android:dialogTitle="@string/dialog_title_net_trigger_preference"
            android:key="net_trigger"
            android:summary="@string/net_trigger"
            android:title="@string/title_net_trigger_preference" />

        <EditTextPreference
            android:defaultValue="@string/power_trigger"
            android:dialogTitle="@string/dialog_title_power_trigger_preference"
            android:key="power_trigger"
            android:summary="@string/power_trigger"
            android:title="@string/title_power_trigger_preference" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/mounts_preferences">

        <CheckBoxPreference
            android:defaultValue="@string/is_mounts"
            android:key="is_mounts"
            android:summary="@string/summary_is_mounts_preference"
            android:title="@string/title_is_mounts_preference" />

        <PreferenceScreen
            android:dependency="is_mounts"
            android:key="mounts_editor"
            android:summary="@string/summary_mounts_editor_preference"
            android:title="@string/title_mounts_editor_preference" />

    </PreferenceCategory>

</PreferenceScreen>
